--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.search.SearchBar
         android:id="@+id/searchBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="14dp"
         android:hint="@string/searchbar_hint"
@@ -59,16 +59,18 @@
         tools:ignore="RtlSymmetry" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCatalog"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="3"
-        tools:itemCount="20"
+        tools:itemCount="40"
         tools:listitem="@layout/item_catalog"
         android:contentDescription="@string/rv_post_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/catalogTitle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
