--- a/app/src/main/res/layout/activity_likes.xml
+++ b/app/src/main/res/layout/activity_likes.xml
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@id/likesTitle" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLikes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
@@ -53,6 +54,7 @@
         android:contentDescription="@string/rv_post_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/likesTitle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
