--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemCatalog"
-    android:layout_width="wrap_content"
-    android:layout_marginVertical="5dp"
-    android:layout_height="wrap_content" >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="5dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imgBatik"
-        android:layout_width="110dp"
+        android:layout_width="match_parent"
         android:layout_height="110dp"
         android:scaleType="centerCrop"
         tools:src="@tools:sample/avatars"
