--- a/app/src/main/res/layout/item_bottom_sheet.xml
+++ b/app/src/main/res/layout/item_bottom_sheet.xml
@@ -21,13 +21,12 @@
 
         <TextView
             android:id="@+id/batikName"
-            android:layout_width="350dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/batik_name"
-            android:textSize="35sp"
-            app:layout_constraintEnd_toEndOf="@id/divider"
-            app:layout_constraintStart_toStartOf="@id/divider"
+            android:textSize="30sp"
+            app:layout_constraintStart_toStartOf="@id/batikDesc"
             app:layout_constraintTop_toBottomOf="@id/divider" />
 
         <TextView
@@ -45,15 +44,16 @@
 
         <TextView
             android:id="@+id/batikDesc"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp"
             android:background="@drawable/container_batik_description"
             android:fontFamily="@font/poppins"
             android:padding="15dp"
             android:text="@string/lorem"
-            app:layout_constraintEnd_toEndOf="@id/batikName"
-            app:layout_constraintStart_toStartOf="@id/batikName"
+            app:layout_constraintEnd_toEndOf="@id/divider"
+            app:layout_constraintStart_toStartOf="@id/divider"
             app:layout_constraintTop_toBottomOf="@id/batikLoc" />
 
         <androidx.appcompat.widget.AppCompatButton
