--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -12,14 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="14dp"
-        android:hint="@string/searchbar_hint"
         android:layout_marginStart="70dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="30dp"
+        android:hint="@string/searchbar_hint"
+        app:layout_constraintBottom_toTopOf="@id/catalogTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/backButton"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/catalogTitle"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.search.SearchView
         android:id="@+id/searchView"
@@ -48,13 +48,13 @@
         android:id="@+id/catalogTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/catalog"
-        android:fontFamily="@font/poppins_bold"
-        android:textSize="40sp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/poppins_bold"
         android:paddingStart="20dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/catalog"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchBar"
         tools:ignore="RtlSymmetry" />
 
@@ -63,14 +63,26 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
+        android:contentDescription="@string/rv_post_description"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/catalogTitle"
         app:spanCount="3"
         tools:itemCount="40"
-        tools:listitem="@layout/item_catalog"
-        android:contentDescription="@string/rv_post_description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_catalog" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/catalogTitle"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
