--- a/app/src/main/res/layout/activity_detail_catalog.xml
+++ b/app/src/main/res/layout/activity_detail_catalog.xml
@@ -26,7 +26,7 @@
                 android:layout_height="match_parent"
                 android:keepScreenOn="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/img_ilustration3"
+                android:src="@drawable/img_placeholder"
                 app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
@@ -91,6 +91,16 @@
                 app:layout_constraintTop_toBottomOf="@id/icon_location" />
 
             <TextView
+                android:id="@+id/label_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/description"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="20sp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@id/detail_divider_top"/>
+
+            <TextView
                 android:id="@+id/tv_detail_batik"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -99,20 +109,46 @@
                 android:justificationMode="inter_word"
                 android:text="@string/onboarding_discover_description"
                 android:textSize="11sp"
-                app:layout_constraintTop_toBottomOf="@id/detail_divider_top"
+                app:layout_constraintTop_toBottomOf="@id/label_description"
                 tools:targetApi="o" />
 
-            <com.google.android.material.progressindicator.CircularProgressIndicator
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/label_history"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="visible" />
+                android:text="@string/history"
+                android:fontFamily="@font/poppins_bold"
+                android:textSize="20sp"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_detail_batik"/>
+
+            <TextView
+                android:id="@+id/tv_history_batik"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/poppins"
+                android:justificationMode="inter_word"
+                android:text="@string/onboarding_discover_description"
+                android:textSize="11sp"
+                app:layout_constraintTop_toBottomOf="@id/label_history"
+                tools:targetApi="o" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <View
+        android:id="@+id/loadingView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/white"/>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_gravity="center"
+        tools:visibility="gone" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
